--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,7 +7,7 @@
     xmlns:p="http://primefaces.org/ui">
     
 <h:head>
-    <title>Argentum Web</title>
+    <title>Argentum Web - Update</title>
 </h:head>
 
 <h:body>
